--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,8 @@ dependencies:
 - unordered-containers
 library:
   source-dirs: src
+  generated-other-modules:
+  - Paths_bencodex
   dependencies:
   - attoparsec >= 0.12 && < 1
   - hashable
